# PyLaTeXtables

./: .gitignore  README.md  make_examples.py  pyproject.toml  tash
PyLaTeXtables/: __init__.py  formatting.py  utils.py
PyLaTeXtables/templates/: eoc.tex  eoc_table_template.tex  general.tex
examples/: 2d_grid.csv  2d_grid.tex  2d_grid_transposed.tex  _BACKUP_852.gitignore  _REMOTE_852.gitignore  main.tex
